--- a/2020/lecture_notes/tex/5_PT.tex
+++ b/2020/lecture_notes/tex/5_PT.tex
@@ -48,8 +48,10 @@ which is obtained by shifting our Hamiltonian by the HF energy.
 where 
 \[\Hc = H - \braket{\Phi| H | \Phi} \]
 \[\Ecorr = E_{\mathrm{exact}} - E_{\mathrm{HF}}\]
-In this set of notes, we will cover what is known as M{\o}ller-Plesset perturbation theory methods (MP$n$) 
-    for obtaining correlation energies.
+
+We will start by discussing Rayleigh-Schr{\"o}dinger perturbation theory (RSPT), which applies the ideas of PT to the time-independent 
+    Schr{\"o}dinger equation.
+Next, we will apply the results of RSPT to derive M{\o}ller-Plesset methods (MP$n$) for approximating the electronic correlation energy of molecular systems. 
 
 \section{Rayleigh-Schr{\"o}dinger Perturbation Theory}
 Perturbation theory (PT), in the most general sense, is applicable in nearly every domain of physics. 
