--- a/2020/lecture_notes/tex/5_PT.tex
+++ b/2020/lecture_notes/tex/5_PT.tex
@@ -217,6 +217,7 @@ We first must divide our Hamiltonian into two parts, one which has a simple solu
 \[H = H_0 + V \]
 In MP$n$ methods, the $H_0$ part of the Hamiltonian is taken to be the Hartree-Fock Hamiltonian,
 \[H_0 = F = (h_p^q + \bar{g}_{pi}^{qi}) a_q^p = f_p^q a_q^p  \]
+Note here we are \textbf{not} using the $\Phi$-normal ordered Fock operator $f_p^q \tilde{a}_q^p$.
 The perturbation $V$ will just be everything not included in $H_0$. 
 \[V = H - F \]
 \[V =  \frac{1}{4} \bar{g}_{pq}^{rs} a_{rs}^{pq} - \bar{g}_{pi}^{qi} a_{q}^{p}  \]
